--- a/Ecommerce/1hamburger/style.css
+++ b/Ecommerce/1hamburger/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Poppins" sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   min-height: 100vh;
 }
@@ -25,7 +25,7 @@ button {
 }
 
 button.active {
-  transform: translateX(-100px);
+  transform: translateX(-120px);
 }
 
 nav {
